# obs_service_cpp

./: CMakeLists.txt  README.md  obs_service_cpp.kdev4
doc/: CMakeLists.txt  Doxyfile.in  obs_service_cpp.txt
examples/: CMakeLists.txt  obs_service_example.cpp
obs/: service.hpp
tests/: CMakeLists.txt  test_xml.cpp
